fixed edit and delete icon cut off in smaller viewport issue

--- a/assets/scss/components/Recipe.scss
+++ b/assets/scss/components/Recipe.scss
@@ -105,6 +105,9 @@
         max-width: 500px;
         max-height: 250px;
     }
+    .button-group {
+        margin-top: 100px;
+    }
 }
 
 @include maxMediaQueries(1000px) {
@@ -118,5 +121,8 @@
     .recipe-img {
         max-width: 400px;
         max-height: 200px;
+    }
+    .button-group {
+        margin-top: 80px;
     }
 }
